US-AGENT-001: expand agent actions

--- a/apps/agent-web/index.html
+++ b/apps/agent-web/index.html
@@ -75,6 +75,8 @@
         <button id="completeBtn" data-action="complete">Complete</button>
         <button id="holdBtn" data-action="hold">Hold</button>
         <button id="unholdBtn" data-action="unhold">Unhold</button>
+        <button id="noShowBtn" class="danger" data-action="no-show">No Show</button>
+        <button id="cancelBtn" class="danger" data-action="cancel">Cancel</button>
       </div>
       <div class="transfer">
         <label>
