UI: finalize agent, kiosk, display, public

--- a/apps/agent-web/index.html
+++ b/apps/agent-web/index.html
@@ -13,8 +13,13 @@
         <p class="eyebrow">QMS Agent</p>
         <h1>Queue View</h1>
       </div>
-      <div class="status" id="status">Not connected</div>
+      <div class="header-actions">
+        <button id="logoutBtn" class="ghost">Logout</button>
+        <div class="status" id="status">Not connected</div>
+      </div>
     </header>
+
+    <section class="alert" id="alert" hidden></section>
 
     <section class="card">
       <h2>Session</h2>
