--- a/apps/display-app/index.html
+++ b/apps/display-app/index.html
@@ -16,6 +16,8 @@
       <div class="status" id="status">Connecting...</div>
     </header>
 
+    <section class="alert" id="alert" hidden>Connection lost. Using fallback polling.</section>
+
     <section class="card">
       <h2>Display Config</h2>
       <div class="grid">
