--- a/apps/kiosk-app/index.html
+++ b/apps/kiosk-app/index.html
@@ -89,7 +89,7 @@
       <pre class="config-preview" id="configPreview">{}</pre>
     </section>
 
-    <section class="card">
+    <section class="card printable">
       <h2>Issue Ticket</h2>
       <div class="actions">
         <button id="issueBtn">Get Ticket</button>
