--- a/apps/admin-web/index.html
+++ b/apps/admin-web/index.html
@@ -253,7 +253,15 @@
             Limit
             <input id="userLimit" type="number" min="5" value="25" />
           </label>
+          <label>
+            Page
+            <input id="userPage" type="number" min="1" value="1" />
+          </label>
           <button id="searchUsers">Search Users</button>
+        </div>
+        <div class="grid">
+          <button id="prevPage" class="ghost">Prev</button>
+          <button id="nextPage" class="ghost">Next</button>
         </div>
         <div class="list" id="userList"></div>
         <h3 class="subhead">Access Scope</h3>
