--- a/apps/analytics-web/index.html
+++ b/apps/analytics-web/index.html
@@ -90,6 +90,14 @@
             <p>Serving</p>
             <strong id="servingCount">-</strong>
           </div>
+          <div class="kpi alt">
+            <p>Active Counters</p>
+            <strong id="activeCounters">-</strong>
+          </div>
+          <div class="kpi alt">
+            <p>Busy Counters</p>
+            <strong id="busyCounters">-</strong>
+          </div>
         </div>
       </div>
     </section>
