--- a/apps/display-app/index.html
+++ b/apps/display-app/index.html
@@ -39,7 +39,7 @@
         </label>
         <label>
           Service ID
-          <input id="serviceId" placeholder="UUID" />
+          <input id="serviceId" placeholder="UUID, UUID" />
         </label>
         <label>
           Language
