SEC-BASELINE: enforce access control and dockerize services

--- a/apps/admin-web/index.html
+++ b/apps/admin-web/index.html
@@ -28,6 +28,10 @@
           <input id="adminBase" value="http://localhost:8083" />
         </label>
         <label>
+          Session ID (Bearer)
+          <input id="sessionId" placeholder="Session token" />
+        </label>
+        <label>
           Tenant ID
           <input id="tenantId" placeholder="UUID" />
         </label>
