--- a/apps/agent-web/index.html
+++ b/apps/agent-web/index.html
@@ -32,6 +32,10 @@
           Queue Base URL
           <input id="queueBase" value="http://localhost:8080" />
         </label>
+        <label>
+          Realtime Base URL
+          <input id="realtimeBase" value="http://localhost:8085" />
+        </label>
       </div>
       <div class="grid">
         <label>
