--- a/apps/analytics-web/index.html
+++ b/apps/analytics-web/index.html
@@ -30,6 +30,10 @@
           <input id="analyticsBase" value="http://localhost:8084" />
         </label>
         <label>
+          Session ID (Bearer)
+          <input id="sessionId" placeholder="Session token" />
+        </label>
+        <label>
           Tenant ID
           <input id="tenantId" placeholder="UUID" />
         </label>
