--- a/apps/display-app/index.html
+++ b/apps/display-app/index.html
@@ -29,6 +29,14 @@
           <input id="queueBase" value="http://localhost:8080" />
         </label>
         <label>
+          Realtime Base URL
+          <input id="realtimeBase" value="http://localhost:8085" />
+        </label>
+        <label>
+          Session ID (Bearer)
+          <input id="sessionId" placeholder="Session token" />
+        </label>
+        <label>
           Tenant ID
           <input id="tenantId" placeholder="UUID" />
         </label>
