--- a/apps/public-web/index.html
+++ b/apps/public-web/index.html
@@ -32,6 +32,10 @@
           <input id="realtimeBase" value="http://localhost:8085" />
         </label>
         <label>
+          Session ID (optional)
+          <input id="sessionId" placeholder="Session token" />
+        </label>
+        <label>
           Tenant ID
           <input id="tenantId" placeholder="UUID" />
         </label>
